--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genevive Macrayo | Portfolio</title>
-    <meta name="description" content="Pokemon Mystery Dungeon inspired portfolio for freelance web development." />
+    <meta name="description" content="Pokemon Mystery Dungeon inspired portfolio for web development." />
     <link rel="icon" type="image/svg+xml" href="/pokeball.svg" />
   </head>
   <body>
