--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genevive Macrayo | Portfolio</title>
     <meta name="description" content="Pokemon Mystery Dungeon inspired portfolio for web development." />
-    <link rel="icon" type="image/svg+xml" href="/pokeball.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/pokeball.svg" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
